--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Pedro Gamela",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
   }
